package learn.design.pattern.behavioral.observer.sysn;

/**
 * 公告板展示接口
 */
public interface DisplayElement {

	/**
	 * 展示方法
	 */
	void display();
}
